# WijnVoorraadApp

./: .coverage  .coveragerc  .cz.toml  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  cov.xml  db.sqlite3  manage.py  passenger_wsgi.py  pyproject.toml  pytest.ini  requirements.txt
WijnProject/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
WijnProject/settings/: base.py  dev.py  prod.py
WijnVoorraad/: __init__.py  admin.py  apps.py  dbrouters.py  dennis.py  forms.py  models.py  models_conversie.py  models_oudwijn.py  services.py  testModels.py  urls.py  views.py  views_basis.py  views_conversie.py  views_popup.py  wijnvars.py
WijnVoorraad/migrations/: 0001_initial.py  0001_initial_squashed_0060_wijnsoort_omschrijving_engels_ai_and_more.py  0002_druivensoort_alter_wijnsoort_options.py  0003_deelnemer.py  0004_locatie_vak.py  0005_alter_vak_options.py  0006_remove_vak_omschrijving_and_more.py  0007_wijn.py  0008_alter_druivensoort_options_alter_wijn_options_and_more.py  0009_alter_wijn_jaar.py  0010_wijn_classificatie_wijn_leverancier_wijn_opmerking_and_more.py  0011_alter_wijndruivensoort_options_and_more.py  0012_alter_wijn_wijnsoort_and_more.py  0013_voorraadmutatie.py  0014_alter_voorraadmutatie_options_vak_capaciteit.py  0015_wijnvoorraad_unique_wijnvoorraad.py  0016_alter_wijnvoorraad_options.py  0017_wijn_unique_wijn.py  0018_deelnemer_standaardlocatie_deelnemeruser_and_more.py  0019_remove_voorraadmutatie_deelnemer_and_more.py  0020_alter_voorraadmutatie_aankoop_and_more.py  0021_remove_aankoop_aantal_and_more.py  0022_alter_voorraadmutatie_locatie.py  0023_alter_voorraadmutatie_omschrijving.py  0025_ontvangst_prijs_alter_wijnvoorraad_ontvangst.py  (+53 more)
(+108 files in other folders)
