[project]
name = "wijnvoorraadapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-select2 (>=8.4.0,<9.0.0)",
    "django-group-by (>=0.3.1,<0.4.0)",
    "openai (>=1.82.0,<2.0.0)",
    "translate (>=3.6.1,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
