[project]
name = "wijnvoorraadapp"
version = "0.16.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-select2 (>=8.4.0,<9.0.0)",
    "django-group-by (>=0.3.1,<0.4.0)",
    "openai (>=1.82.0,<2.0.0)",
    "translate (>=3.6.1,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
pytest = "^8.3.5"
commitizen = "^4.8.2"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
pylint-django = "^2.6.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

version_files = [
    "WijnProject/__init__.py",
]

post_bump_hooks=[
  "build\\push_all.cmd"
]
